--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                   демонстрирует основных персонажей, которые будут доступны в
                   рамках боевого пропуска. <br />
                   Описание боевого пропуска помогает убедить игроков купить
-                  боевой пропус. Оно одержит информацию о том, что входит в
+                  боевой пропус. Оно содержит информацию о том, что входит в
                   боевой пропуск и какие преимущества он дает игрокам. <br />
                   Галерея изображений показывает новые предметы и косметические
                   изменения. Они лучшают визуальное восприятие и позволяют
                   игрокам увидеть, что они получат при покупке. <br />
-                  Кнопка "КУПИТЬ СЕЙЧАС" обращает внимание игроков и упращает
+                  Кнопка "КУПИТЬ СЕЙЧАС" обращает внимание игроков и упрощает
                   покупку.
                 </td>
               </tr>
